generated/manifests/prod-axon/romm/Deployment-romm-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: romm-redis
    app.kubernetes.io/name: valkey
  name: romm-redis
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: romm-redis
      app.kubernetes.io/name: valkey
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/initconfig: 5cc1c3732aa556a293a1479a8fe00c9c
      labels:
        app.kubernetes.io/instance: romm-redis
        app.kubernetes.io/name: valkey
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - /data/conf/valkey.conf
          command:
            - valkey-server
          image: docker.io/valkey/valkey:9.1.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: romm-redis
          ports:
            - containerPort: 6379
              name: tcp
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          startupProbe:
            exec:
              command:
                - valkey-cli
                - ping
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: valkey-data
            - mountPath: /etc/valkey
              name: valkey-acl
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: romm-redis
      volumes:
        - configMap:
            defaultMode: 365
            name: romm-redis-init-scripts
          name: scripts
        - emptyDir:
            medium: Memory
          name: valkey-acl
        - name: valkey-users-secret
          secret:
            defaultMode: 256
            secretName: media-romm
        - emptyDir: {}
          name: valkey-data
