generated/manifests/prod-axon/romm/Deployment-romm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: romm
  name: romm
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: romm
      app.kubernetes.io/name: romm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: romm
        app.kubernetes.io/name: romm
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: DB_HOST
              value: media-pg-rw
            - name: DB_NAME
              value: romm
            - name: DB_PASSWD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: media-pg-romm-password
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  key: username
                  name: media-pg-romm-password
            - name: DISABLE_SETUP_WIZARD
              value: "true"
            - name: HASHEOUS_API_ENABLED
              value: "true"
            - name: IGDB_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: igdb-client-id
                  name: media-romm-metadata
            - name: IGDB_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: igdb-client-secret
                  name: media-romm-metadata
            - name: OIDC_AUTOLOGIN
              value: "true"
            - name: OIDC_CLAIM_ROLES
              value: roles
            - name: OIDC_CLIENT_ID
              value: romm
            - name: OIDC_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: client-secret
                  name: romm-oidc-client-secret
            - name: OIDC_ENABLED
              value: "true"
            - name: OIDC_PROVIDER
              value: kanidm
            - name: OIDC_REDIRECT_URI
              value: https://romm.json64.dev/api/oauth/openid
            - name: OIDC_ROLE_ADMIN
              value: admin
            - name: OIDC_ROLE_VIEWER
              value: user
            - name: OIDC_SERVER_APPLICATION_URL
              value: https://romm.json64.dev
            - name: OIDC_SERVER_METADATA_URL
              value: https://idm.json64.dev/oauth2/openid/romm/.well-known/openid-configuration
            - name: PGID
              value: "65536"
            - name: PUID
              value: "1027"
            - name: REDIS_HOST
              value: romm-redis
            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redis-password
                  name: media-romm
            - name: REDIS_PORT
              value: "6379"
            - name: RETROACHIEVEMENTS_API_KEY
              valueFrom:
                secretKeyRef:
                  key: retroachievements-api-key
                  name: media-romm-metadata
            - name: ROMM_AUTH_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: auth-secret-key
                  name: media-romm
            - name: ROMM_DB_DRIVER
              value: postgresql
            - name: SCAN_TIMEOUT
              value: "1209600"
            - name: SCAN_WORKERS
              value: "10"
            - name: STEAMGRIDDB_API_KEY
              valueFrom:
                secretKeyRef:
                  key: steamgriddb-api-key
                  name: media-romm-metadata
            - name: TZ
              value: America/Los_Angeles
          image: rommapp/romm@sha256:dc586cb3a2c7316fcffb3dc273171b1964523f0f409e989295d26d2199df1d4e
          name: main
          volumeMounts:
            - mountPath: /romm/library/roms
              name: library
              readOnly: true
              subPath: rom-project/canonical
            - mountPath: /romm/library/bios
              name: library
              readOnly: true
              subPath: rom-project/bios
            - mountPath: /romm/resources
              name: resources
              subPath: rom-project/romm-metadata/resources
            - mountPath: /romm/assets
              name: userdata
              subPath: assets
            - mountPath: /romm/config
              name: userdata
              subPath: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: romm
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: media-data-nfs
        - name: resources
          persistentVolumeClaim:
            claimName: media-data-nfs
        - name: userdata
          persistentVolumeClaim:
            claimName: romm-userdata
