generated/manifests/prod-axon/romm/Service-romm-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: romm-redis
    app.kubernetes.io/name: valkey
  name: romm-redis
  namespace: media
spec:
  ports:
    - name: tcp
      port: 6379
      protocol: TCP
      targetPort: tcp
  selector:
    app.kubernetes.io/instance: romm-redis
    app.kubernetes.io/name: valkey
  type: ClusterIP
