generated/manifests/prod-axon/romm/Service-romm.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: romm
    app.kubernetes.io/service: romm
  name: romm
  namespace: media
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: romm
  type: ClusterIP
