generated/manifests/prod-axon/romm/HTTPRoute-romm.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: romm
  namespace: media
spec:
  hostnames:
    - romm.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: romm
          port: 8080
