generated/manifests/prod-axon/romm/SecurityPolicy-romm-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: romm-oidc
  namespace: media
spec:
  oidc:
    clientID: romm
    clientSecret:
      name: romm-oidc-client-secret
    forwardAccessToken: true
    provider:
      issuer: https://idm.json64.dev/oauth2/openid/romm
    scopes:
      - email
      - openid
      - profile
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: romm
