generated/manifests/prod-axon/romm/CiliumNetworkPolicy-allow-gateway-ingress-romm.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress-romm
  namespace: media
spec:
  description: Allow Envoy Gateway proxies to reach romm.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: romm
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateways
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
